# xgp-v3-screen

./: .gitignore  Makefile
files/: modem_info.py  zz_xgp_screen.init
src/: CMakeLists.txt  build.sh  lv_conf.h  main.c  toolchain-arm64.cmake
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_MiSans16.c  ui_font_MiSans20.c
src/ui/images/: ui_img_581822748.c
src/ui/screens/: ui_Boot.c  ui_Boot.h  ui_ModemInfo.c  ui_ModemInfo.h  ui_ModemSignal.c  ui_ModemSignal.h  ui_NetworkInfo.c  ui_NetworkInfo.h  ui_Splash.c  ui_Splash.h  ui_SystemInfo.c  ui_SystemInfo.h  ui_SystemStatus.c  ui_SystemStatus.h
